turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:4: error: not found: value setCouleur
    setCouleur(Color.black);droite();avance()
    ^LangtonsAnt:9: error: not found: value setCouleur
    setCouleur(Color.white);gauche();avance()
    ^