turmites.lessons.turmites.langton.Langton.scala.code
def step() {
  if (getCouleurSol()==Color.white) {
    baisseBrosse()
    setCouleur(Color.black);droite();avance()
    leveBrosse()
  }
  else if (getCouleurSol()==Color.black) {
    baisseBrosse()
    setCouleur(Color.white);gauche();avance()
    leveBrosse()
  }
}